--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "firebase": "^8.9.0",
     "framer-motion": "^4.0.3",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.19.2",
+    "react-query-devtools": "^2.6.3",
+    "save": "^2.4.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
+    "typescript": "^4.3.5"
+  }
 }
